# mldsa.wasm

./: .gitignore  Cargo.toml  LICENSE-APACHE  Makefile  README.md
.github/workflows/: ci.yml  publish.yml
crates/mldsa-core/: Cargo.toml
crates/mldsa-core/src/: lib.rs  tests.rs  wasm.rs
crates/mldsa44/: Cargo.toml  README.md
crates/mldsa44/src/: lib.rs
crates/mldsa65/: Cargo.toml  README.md
crates/mldsa65/src/: lib.rs
crates/mldsa87/: Cargo.toml  README.md
crates/mldsa87/src/: lib.rs
scripts/tpl/: index.d.ts  index.js.template  index44.d.ts  index44.js.template  index65.d.ts  index65.js.template  index87.d.ts  index87.js.template
src/: lib.rs
