[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["Thomas <tom@unebaguette.fr>"]
repository = "https://github.com/UneBaguette/mldsa.wasm"
description = "ML-DSA (FIPS 204) digital signatures with WASM bindings"
readme = "README.md"
keywords = ["crypto", "signature", "post-quantum", "wasm", "wasm-bindgen"]
categories = ["cryptography", "wasm"]

[workspace.dependencies]
ml-dsa = { version = "0.1.0-rc", features = ["zeroize", "rand_core"] }
getrandom = { version = "0.4", features = ["sys_rng"] }
zeroize = { version = "1" }
serde = { version = "1.0", features = ["derive"] }

# WASM
wasm-bindgen = { version = "=0.2.118" }
serde-wasm-bindgen = { version = "0.6" }
tsify = { version = "0.5", features = ["js"] }
wasm-bindgen-test = "0.3"
base64 = { version = "0.22" }

# Allocator
talc = "5"

# Internal
mldsa-core = { path = "crates/mldsa-core", version = "0.2.0" }
mldsa44 = { path = "crates/mldsa44", version = "0.2.0" }
mldsa65 = { path = "crates/mldsa65", version = "0.2.0" }
mldsa87 = { path = "crates/mldsa87", version = "0.2.0" }
