[package]
name = "mldsa-core"
description = "Core ML-DSA (FIPS 204) implementation (internal)"
version = "0.2.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish = true

[features]
default = []
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:tsify", "dep:base64", "dep:serde"]

[dependencies]
ml-dsa.workspace = true
getrandom.workspace = true
zeroize.workspace = true

# wasm
base64 = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }
tsify = { workspace = true, optional = true }
serde = { workspace = true, optional = true }